# Computational-Intelligence

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  settings.json
optimization/: SGD.py
train/: main.py
