[tool.poetry]
name = "CI"
version = "0.1.0"
description = "All You Need to Know about Computational Intelligence"
authors = ["Ahmed Elsayed"]

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^1"
tensorflow = "^2.15.0.post1"
scipy = "^1.12.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
nbstripout = "*"
notebook = "*"
rich = "*"
pre-commit = "*"

[tool.poetry.group.docs.dependencies]
pydocstyle = {extras = ["toml"], version = "*"}

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
